--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //Retrofit
     implementation 'com.google.code.gson:gson:2.8.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha01'
+    
+    //Kotlin Courtine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+
+
+
+
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation "com.android.support:cardview-v7:27.1.1"
     implementation 'com.android.support:recyclerview-v7:27.1.1'
